--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node src/app.js",
-    "dev": "nodemon src/app.js"
+    "build": "npm install && npm run lint && npm run test",
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "validator": "^13.12.0"
   }
 }
